--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "\"Simple mindmapping tool using HTML5 canvas\"",
   "main": "server.js",
   "scripts": {
-    "test": "mocha && node tests/test-model-idea.js && node tests/test-model-map.js && node tests/test-model-user.js"
+    "test": "mocha && node test/model-idea.js && node test/model-view.js && node test/model-user.js && node test/helper-canvas.js && node test/helper-connector.js && node test/helper-labelledOval.js"
   },
   "dependencies": {
     "express": "4.13.3",
