--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,13 @@ coverage
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
+build
+
+# Dev Pub
+public
 
 # Dependency directory
-# https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
+
+# JSHint Config
+.gitignore
