--- a/package.json
+++ b/package.json
@@ -13,7 +13,17 @@
     "underscore": "1.8.3"
   },
   "devDependencies": {
+    "browserify-shim": "^3.8.12",
     "chai": "^3.4.1",
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-browserify": "^0.5.1",
+    "gulp-cssnano": "^2.1.0",
+    "gulp-jshint": "^2.0.0",
+    "gulp-less": "^3.0.5",
+    "gulp-mocha-phantomjs": "^0.10.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^1.5.1",
     "mocha": "^2.3.4",
     "nodemon": "^1.8.1",
     "sinon": "^1.17.2"
