--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "browserify app/index.js --standalone MindMaps > build/simplemindmaps.js; browserify app/index.js --standalone MindMaps > public/javascripts/simplemindmaps.js",
     "clean": "rm -rf node_modules build; mkdir build; npm install",
-    "lint": "jshint **.js",
+    "lint": "jshint app || true",
     "test": "mocha test/",
     "build-loop": "watchify app/index.js --standalone MindMaps -o build/simplemindmaps.js -dv & watchify app/index.js --standalone MindMaps -o public/javascripts/simplemindmaps.js -dv",
     "dev-loop": "npm run build-loop & nodemon server.js",
@@ -27,7 +27,8 @@
     "phantomjs": "^1.9.19",
     "sinon": "^1.17.2",
     "supervisor": "^0.9.1",
-    "watchify": "^3.7.0"
+    "watchify": "^3.7.0",
+    "jshint": "latest"
   },
   "repository": {
     "type": "git",
